--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "cdlist-library",
-  "version": "0.1.3",
+  "name": "cdlist",
+  "version": "0.0.1",
   "description": "cdlist-library",
   "main": "src/index.js",
   "scripts": {
